[package]
name = "xla"
version = "0.2.0"
authors = ["laurent <laurent.mazare@gmail.com>"]
edition = "2021"
description = "Bindings for the XLA C++ library."
repository = "https://github.com/LaurentMazare/xla-rs"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
thiserror = "1"
libc = "0.2"
num-traits = "0.2"
num-derive = "0.3"
zip = "0.6.4"

[build-dependencies]
bindgen = "0.64"
cc = "1.0"

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4.2.4", features = ["derive"] }
fancy-regex = "0.11.0"
rand = "0.8.5"
serde_json = "1.0.96"
