[workspace]
members = ["xla", "xla-nn"]
resolver = "2"

[workspace.package]
version = "0.3.1"
authors = ["laurent <laurent.mazare@gmail.com>"]
edition = "2021"
description = "Bindings for the XLA C++ library."
repository = "https://github.com/LaurentMazare/xla-rs"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"

[workspace.dependencies]
xla = { path = "xla", version = "0.3.1" }
thiserror = "1"
libc = "0.2"
num-traits = "0.2"
num-derive = "0.4"
zip = "0.6.4"
hf-hub = { version = "1.0.0", features = ["blocking"] }
bindgen = "0.72"
cc = "1.0"
anyhow = "1.0"
clap = { version = "4.2.4", features = ["derive"] }
fancy-regex = "0.11.0"
half = "2.4.1"
memmap2 = "0.9.11"
rand = "0.8.5"
safetensors = "0.8.0"
serde_json = "1.0.96"
tokenizers = "0.23.1"
