[package]
name = "xla-moshi"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "Moshi / Mimi models built on top of the xla crate."

[dependencies]
xla = { workspace = true }
xla-nn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hf-hub = { workspace = true }
kaudio = { workspace = true }
