[package]
name = "xla-nn"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "Neural-network helpers built on top of the xla crate."

[dependencies]
xla = { workspace = true }
thiserror = { workspace = true }
half = { workspace = true }
memmap2 = { workspace = true }
safetensors = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fancy-regex = { workspace = true }
half = { workspace = true }
hf-hub = { workspace = true }
memmap2 = { workspace = true }
rand = { workspace = true }
safetensors = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
