[package]
name = "xla"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
libc = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
zip = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
cc = { workspace = true }
